# bmkg-api-v1

./: README.md  app.py  app2.py  pyproject.toml  server.py
Controller/: ErrorController.py  GempaController.py  HomeController.py  ImageController.py
database/: database.py
datahome/: home.json
