[tool.poetry]
name = "repl_nix_earthquaqe-bmkg-api-v1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
requests = "^2.31.0"
xmltodict = "^0.13.0"
dicttoxml = "^1.7.16"
Flask-Limiter = "^3.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
